# spectral-ti-topology

./: LICENSE  README.md  pyproject.toml
scripts/: generate_all.py  generate_figure3.py  generate_figure4.py  generate_figure5.py  generate_figure6.py  generate_table1.py  generate_table2.py  generate_table3.py
src/spectral_ti/: __init__.py  constitutive.py  diagnostics.py  fem.py  mandel.py  optimization.py  visualization.py
tests/: test_constitutive.py
